--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "nats-hemera": "^3.1.8",
     "datafile": "3.2.0",
     "lodash": "4.17.4",
-    "npac": "^1.3.1",
+    "npac": "^2.0.2",
     "yargs": "10.0.3"
   },
   "devDependencies": {
@@ -59,6 +59,7 @@
     "pre-push": "^0.1.1",
     "rimraf": "^2.6.2",
     "should": "3.1.2",
+    "sinon": "^4.4.8",
     "vinyl-buffer": "^1.0.0"
   },
   "scripts": {
