--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "bin": {},
   "main": "./dist/index.js",
   "dependencies": {
-    "datafile": "3.2.0",
+    "lint-staged": "^8.1.3",
     "lodash": "^4.17.11",
     "nats": "^0.8.4",
     "nats-hemera": "^5.4.0",
     "npac": "^2.0.3",
+    "prettier": "^1.16.4",
+    "save-dev": "^2.0.0",
     "yargs": "10.0.3"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
     "cross-env": "^5.1.1",
+    "datafile": "3.2.0",
     "eslint": "^3.13.1",
     "expect": "^1.6.0",
     "gulp": "^4.0.0",
@@ -62,6 +65,18 @@
     "sinon": "^4.4.8",
     "vinyl-buffer": "^1.0.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "eslint src --ext .js",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir dist",
     "lint": "eslint src/**.js",
@@ -71,6 +86,8 @@
     "coveralls": "NODE_ENV=test istanbul cover _mocha --report lcovonly -- recursive --compilers js:babel-register --timeout 15000 'src/**/*.spec.js' -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "docs": "rm -fr ./docs/api/* && jsdoc -c ./.jsdoc.json",
     "docgen": "node_modules/.bin/gulp docgen",
+    "precommit": "lint-staged",
+    "prettier": "prettier --single-quote --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
     "prepublishOnly": "npm run lint && npm run test && npm run build && npm run docs",
     "all": "npm run lint && npm run coverage && npm run build && npm run docs"
   },
