--- a/package.json
+++ b/package.json
@@ -24,40 +24,38 @@
   "main": "./dist/index.js",
   "dependencies": {
     "lodash": "^4.17.11",
-    "nats": "^0.8.4",
-    "nats-hemera": "^5.4.0",
-    "npac": "^2.0.3",
-    "yargs": "10.0.3"
+    "nats": "^1.2.2",
+    "nats-hemera": "^6.1.1",
+    "npac": "^2.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "6.2.5",
+    "babel-loader": "8.0.5",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.20.2",
-    "babel-polyfill": "6.16.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "6.24.1",
     "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "coveralls": "^3.0.2",
-    "cross-env": "^5.1.1",
-    "datafile": "3.2.0",
+    "cross-env": "^5.2.0",
     "gulp": "^4.0.0",
-    "gulp-debug": "^3.1.0",
-    "gulp-markdown": "^1.2.0",
-    "gulp-mustache": "^3.0.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-debug": "^4.0.0",
+    "gulp-markdown": "^3.0.0",
+    "gulp-mustache": "^4.1.0",
+    "gulp-rename": "^1.4.0",
     "gulp-through": "^0.4.0",
-    "istanbul": "1.0.0-alpha.2",
+    "istanbul": "^1.1.0-alpha.1",
     "jsdoc": "^3.5.5",
     "lint-staged": "^8.1.3",
-    "mocha": "^4.0.1",
+    "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "pre-push": "^0.1.1",
     "prettier": "^1.16.4",
-    "sinon": "^4.4.8",
+    "sinon": "^7.2.3",
     "vinyl-buffer": "^1.0.0"
   },
   "husky": {
