--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
+    "eslint": "^5.13.0",
     "gulp": "^4.0.0",
     "gulp-debug": "^4.0.0",
     "gulp-markdown": "^3.0.0",
     "gulp-mustache": "^4.1.0",
     "gulp-rename": "^1.4.0",
     "gulp-through": "^0.4.0",
+    "husky": "^1.3.1",
     "istanbul": "^1.1.0-alpha.1",
     "jsdoc": "^3.5.5",
     "lint-staged": "^8.1.3",
@@ -72,6 +74,7 @@
   },
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir dist",
+    "lint": "eslint src/**.js",
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register 'src/**/*.spec.js'",
     "test:watch": "npm test -- --watch",
     "coverage": "NODE_ENV=test istanbul cover _mocha -- recursive --compilers js:babel-register --timeout 15000 'src/**/*.spec.js'",
@@ -84,6 +87,8 @@
     "all": "npm run coverage && npm run build && npm run docs"
   },
   "pre-push": [
-    "test"
+    "lint",
+    "test",
+    "prepublishOnly"
   ]
 }
