--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "bin": {},
   "main": "./dist/index.js",
   "dependencies": {
-    "lodash": "^4.17.11",
-    "nats": "^1.2.2",
+    "lodash": "^4.17.15",
+    "nats": "^1.3.0",
     "nats-hemera": "^6.1.1",
-    "npac": "^2.1.2"
+    "npac": "^2.1.7"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "8.0.5",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-polyfill": "6.26.0",
@@ -40,24 +40,24 @@
     "babel-preset-latest": "6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.5",
     "cross-env": "^5.2.0",
-    "eslint": "^5.13.0",
-    "gulp": "^4.0.0",
+    "eslint": "^6.1.0",
+    "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
-    "gulp-markdown": "^3.0.0",
-    "gulp-mustache": "^4.1.0",
+    "gulp-markdown": "^4.0.0",
+    "gulp-mustache": "^4.1.1",
     "gulp-rename": "^1.4.0",
     "gulp-through": "^0.4.0",
-    "husky": "^1.3.1",
+    "husky": "^3.0.2",
     "istanbul": "^1.1.0-alpha.1",
-    "jsdoc": "^3.5.5",
-    "lint-staged": "^8.1.3",
-    "mocha": "^5.2.0",
+    "jsdoc": "^3.6.3",
+    "lint-staged": "^9.2.1",
+    "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "pre-push": "^0.1.1",
-    "prettier": "^1.16.4",
-    "sinon": "^7.2.3",
+    "prettier": "^1.18.2",
+    "sinon": "^7.3.2",
     "vinyl-buffer": "^1.0.0"
   },
   "husky": {
@@ -75,10 +75,10 @@
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir dist",
     "lint": "eslint src/**.js",
-    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register 'src/**/*.spec.js'",
+    "test": "cross-env NODE_ENV=test mocha --recursive --require babel-register 'src/**/*.spec.js'",
     "test:watch": "npm test -- --watch",
-    "coverage": "NODE_ENV=test istanbul cover _mocha -- recursive --compilers js:babel-register --timeout 15000 'src/**/*.spec.js'",
-    "coveralls": "NODE_ENV=test istanbul cover _mocha --report lcovonly -- recursive --compilers js:babel-register --timeout 15000 'src/**/*.spec.js' -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "coverage": "NODE_ENV=test istanbul cover _mocha -- recursive --require babel-register --timeout 15000 'src/**/*.spec.js'",
+    "coveralls": "NODE_ENV=test istanbul cover _mocha --report lcovonly -- recursive --require babel-register --timeout 15000 'src/**/*.spec.js' -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "docs": "rm -fr ./docs/api/* && jsdoc -c ./.jsdoc.json",
     "docgen": "node_modules/.bin/gulp docgen",
     "precommit": "lint-staged",
