--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "docgen": "node_modules/.bin/gulp docgen",
     "precommit": "lint-staged",
     "prettier": "prettier --single-quote --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
-    "prepublishOnly": "npm run prettier && lint-staged && npm run test && npm run build && npm run docs",
+    "prepublishOnly": "npm run prettier && npm run lint && npm run test && npm run build && npm run docs",
     "all": "npm run coverage && npm run build && npm run docs"
   },
   "pre-push": [
