--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "main": "./dist/index.js",
   "dependencies": {
     "lodash": "^4.17.21",
-    "nats": "^1.4.12",
+    "nats": "1.4.12",
     "nats-hemera": "^7.0.2",
     "npac": "^2.1.11"
   },
@@ -42,7 +42,7 @@
     "chai": "^4.3.6",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.30.0",
+    "eslint": "^8.9.0",
     "gulp": "^3.2.0",
     "gulp-debug": "^3.2.0",
     "gulp-markdown": "^6.0.0",
@@ -51,12 +51,12 @@
     "gulp-through": "^0.4.0",
     "istanbul": "^1.1.0-alpha.1",
     "jsdoc": "^3.6.10",
-    "lint-staged": "^11.0.0",
+    "lint-staged": "^12.3.4",
     "mocha": "^9.2.1",
     "mocha-lcov-reporter": "^1.3.0",
     "pre-push": "^0.1.1",
     "prettier": "^2.5.1",
-    "sinon": "^11.1.1",
+    "sinon": "^13.0.1",
     "vinyl-buffer": "^1.0.0"
   },
   "scripts": {
