--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "lodash": "^4.17.21",
     "nats": "1.2.x",
     "nats-hemera": "7.0.2",
+    "node-nats-streaming": "^0.3.2",
     "npac": "^2.1.11"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^8.2.5",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-polyfill": "6.26.0",
@@ -41,14 +42,14 @@
     "babel-register": "^6.26.0",
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
-    "eslint": "^8.9.0",
+    "eslint": "^8.21.0",
     "istanbul": "^1.1.0-alpha.1",
-    "jsdoc": "^3.6.10",
-    "lint-staged": "^12.3.4",
-    "mocha": "^9.2.1",
+    "jsdoc": "^3.6.11",
+    "lint-staged": "^13.0.3",
+    "mocha": "^10.0.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "prettier": "^2.5.1",
-    "sinon": "^13.0.1",
+    "prettier": "^2.7.1",
+    "sinon": "^14.0.0",
     "vinyl-buffer": "^1.0.0"
   },
   "scripts": {
